fixed create_event_v1 spacing

--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -342,7 +342,7 @@ a:hover{
 	border-width:2px;
 	margin:0px -5px 0px 0px;
 	width:180px;
-	height:70px;
+	height:43px;
 	/*background:#BBBBBB;*/
 	background-color:rgba(100, 100, 100, 0.6);
 	border-style:none;
@@ -358,7 +358,7 @@ a:hover{
 	moz-box-align:left;
 	margin:0px -5px 0px 0px;
 	width:180px;
-	height:43px;
+	height:45px;
 	/*background:#FFFFFF;*/
 	background-color:rgba(255, 255, 255, 0);
 }
